# hokku_epaper

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  HARDWARE_FACTS.md  LICENSE.txt  README.md  TODO.md  check_ui.py  create_test_images.py  create_test_jxl.py  hokku-server_1.0.0-1_all.deb  hokku_setup.bat  inspect_page.py  pytest.ini  requirements.txt  test_asdict.py
docs/: api.md  compression.md  dithering.md  face_detection_memory_usage.md  firmware_design.md  hardware.md  hardware_facts.md  image_processing_memory_usage.md  image_quality.md  install.md  manual.md  memory_constrained_dither_plan.md  reverse_engineering_overview.md  reverse_engineering_v2.0.19_apr21.md  reverse_engineering_v2.0.26_jun20.md  tech_details.md
firmware/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bat  (+4 more)
firmware/test/host/: CMakeLists.txt  test_config.c  test_logic.c  test_text_render.c
firmware/test/host/build_msvc/Testing/Temporary/: CTestCostData.txt
firmware/test/host/build_verify/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
firmware/test/host/mocks/: esp_app_desc.h  esp_event.h  esp_heap_caps.h  esp_http_client.h  esp_log.h  esp_netif.h  esp_sleep.h  esp_timer.h  esp_wifi.h  nvs_flash.h
firmware/test/host/mocks/driver/: gpio.h  rtc_io.h  spi_master.h
firmware/test/host/mocks/esp_adc/: adc_cali.h  adc_cali_scheme.h  adc_oneshot.h
firmware/test/host/mocks/esp_private/: esp_clk.h
firmware/test/host/mocks/freertos/: FreeRTOS.h  event_groups.h  task.h
firmware/test/host/win_compat/sys/: time.h
tools/: create_test_images.py  create_test_jxl.py  esp32_setup.py  hokku_config.py  hokku_setup.py  inspect_page.py  pi_installer.py  pyproject.toml  release_cache.py  screen_sim.py  serial_quick.py  verify_ui.py
tools/tests/: test_hokku_config.py  test_pi_installer.py  test_release_cache.py
webserver/: AGENT.md  AGENTS.md  README.md  build-deb-docker.bat  build-deb-docker.sh  build-deb.sh  config.json  pyproject.toml  run.bat  webserver.py
webserver/.pybuild/cpython3_3.11/: hokku_server-1.0.0-py3-none-any.whl
webserver/.pybuild/cpython3_3.11/scripts/: hokku-server
webserver/config/: config.example.json  config.json
webserver/debian/: changelog  control  debhelper-build-stamp  files  hokku-server.postinst.debhelper  hokku-server.postrm.debhelper  hokku-server.prerm.debhelper  hokku-server.service  hokku-server.substvars  install  postinst  rules
webserver/debian/hokku-server/DEBIAN/: conffiles  control  md5sums  postinst  postrm  prerm
webserver/debian/hokku-server/lib/systemd/system/: hokku-server.service
webserver/debian/hokku-server/usr/lib/python3/dist-packages/hokku_server-1.0.0.dist-info/: RECORD
webserver/hokku_server/: __init__.py  __main__.py  app_config.py  app_state.py  bounding_box.py  config.py  display.py  dither.py  dither_abc.py  dither_config.py  dither_constrained.py  dither_numba.py  dither_streaming.py  dither_streaming_numba.py  dither_unconstrained.py  dither_unconstrained_numba.py  face_detect.py  face_detect_abstract.py  face_detect_factory.py  face_detect_haar_opencv.py  face_detect_yunet_onnx.py  face_detect_yunet_opencv.py  filesystem.py  flask_app.py  image.py  image_abc.py  image_classifier.py  image_config.py  image_manager.py  image_manager_abstract.py  image_manager_multi.py  image_manager_single.py  image_quality.py  image_record.py  image_renderer.py  mdns.py  memory_guard.py  orientation.py  presets.py  render_worker.py  (+7 more)
webserver/hokku_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
webserver/hokku_server/models/: ATTRIBUTION.md
webserver/static/fonts/: OFL-ShipporiMincho.txt  fonts.css
webserver/templates/: index.html
webserver/tests/: _face_detect_memory_helpers.py  _helpers.py  _memory_helpers.py  conftest.py  test_app_config.py  test_bounding_box.py  test_config.py  test_convert_image_preview_png.py  test_crop_to_fill.py  test_debug_fast_refresh.py  test_decompression_bomb.py  test_display.py  test_dither.py  test_dither_config.py  test_dither_fixture_images.py  test_dither_functions.py  test_dither_memory.py  test_dither_numba.py  test_dither_permutations.py  test_dither_quality.py  test_dither_screen.py  test_estimator.py  test_example_config.py  test_face_detect.py  test_face_detect_memory.py  test_filesystem.py  test_firmware_headers.py  test_flask_api.py  test_flask_routes.py  test_image_classifier.py  test_image_config.py  test_image_dims.py  test_image_manager.py  test_image_manager_concrete.py  test_image_processing.py  test_image_quality.py  test_image_renderer.py  test_image_serving.py  test_integration.py  test_memory_budget.py  (+17 more)
webserver/webserver/: __init__.py  __main__.py  app_config.py  app_state.py  config.py  disk_cache.py  display_constants.py  display_image_config_presets.py  dither.py  dither_constrained.py  dither_unconstrained.py  face_detect.py  face_detect_abstract.py  face_detect_factory.py  face_detect_haar_opencv.py  face_detect_yunet_onnx.py  face_detect_yunet_opencv.py  flask_app.py  image.py  image_classifier.py  image_config.py  image_manager.py  image_manager_abstract.py  image_manager_multi.py  image_manager_single.py  panel_format.py  presets.py  render_pool.py  render_worker.py  screen_headers.py  screen_image_config.py  serve_data.py  serve_scheduler.py  telemetry.py  thumbnail_cache.py  time.py  time_utils.py  watcher.py  worker_count.py
(+15 files in other folders)
