[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hokku-config"
version = "2.1.16"
description = "Configuration tool for Hokku e-paper frame"
requires-python = ">=3.8"
license = {text = "GPL-3.0 (non-commercial)"}
dependencies = [
    "pyserial>=3.5",
    "esptool>=4.0",
]

[project.scripts]
hokku-config = "hokku_config:main"
hokku-setup = "hokku_setup:main"

[tool.setuptools]
py-modules = ["hokku_config", "hokku_setup"]
