[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hokku-server"
version = "2.1.20"
description = "Spectra 6 e-ink image server for Hokku EL133UF1 display"
requires-python = ">=3.9"
license = {text = "GPL-3.0 (non-commercial)"}
dependencies = [
    "flask>=2.0",
    "pillow>=9.0",
    "numpy>=1.20",
    "pillow-heif>=0.10",
]

[project.scripts]
hokku-server = "webserver.flask_app:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "psutil>=5.9",
]

[tool.pytest.ini_options]
addopts = ["-m", "not time_intensive"]
markers = [
    "time_intensive: slow tests (fixture image dithers, full-res RSS checks). Run: pytest -m time_intensive",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["webserver*"]
