[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hokku-server"
version = "2.3.0"
description = "Spectra 6 e-ink image server for Hokku EL133UF1 display"
requires-python = ">=3.9"
license = {text = "GPL-3.0 (non-commercial)"}
dependencies = [
    "flask>=2.0",
    "pillow>=9.0",
    "numpy>=1.20",
    "pillow-heif>=0.10",
    "opencv-contrib-python>=4.8",
    "psutil>=5.9",
]

[project.scripts]
hokku-server = "webserver:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["webserver*"]

[tool.setuptools.package-data]
webserver = ["models/*.onnx", "models/ATTRIBUTION.md"]

[tool.pytest.ini_options]
addopts = ["-m", "not time_intensive"]
markers = [
    "time_intensive: slow tests (full-resolution dither runs); enable with `pytest -m time_intensive`",
    "slow: moderately slow tests (process pool spin-up, idle recycle)",
]
