[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hokku-server"
version = "3.0.0b6"
description = "Spectra 6 e-ink image server for Hokku EL133UF1 display"
requires-python = ">=3.9"
license = {text = "GPL-3.0 (non-commercial)"}
dependencies = [
    "flask>=2.0",
    "pillow>=9.0",
    "numpy>=1.20",
    "numba>=0.59",
    "zeroconf>=0.38",
    "pillow-heif>=0.10",
    "pillow-avif-plugin>=0.1",
    "pillow-jxl-plugin>=0.1",
    "psutil>=5.9",
    "opencv-python-headless>=4.7",
    "zstd",
]

[project.scripts]
hokku-server = "hokku_server:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-xdist>=3.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hokku_server*"]

[tool.setuptools.package-data]
hokku_server = ["models/ATTRIBUTION.md", "models/face_detection_yunet_2023mar.onnx"]

[tool.pytest.ini_options]
addopts = ["-m", "not time_intensive and not serial", "-n", "8", "--dist=loadfile"]
markers = [
    "time_intensive: slow tests (full-resolution dither runs); enable with `pytest -m time_intensive`",
    "slow: moderately slow tests (process pool spin-up, idle recycle)",
    "serial: tests that must run alone (e.g. absolute-memory measurements); excluded from default parallel run, run with `pytest -m serial -n 0`",
]
